--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "browserify": "^11.0.1",
     "chai": "^3.2.0",
     "gulp": "^3.9.0",
+    "gulp-batch": "^1.0.5",
+    "gulp-changed": "^1.3.0",
     "gulp-jshint": "^1.11.2",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.3.4",
     "jasmine-core": "^2.3.4",
     "jshint-stylish": "^2.0.1",
     "karma": "^0.13.9",
