--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.1.1",
+    "karma-sinon": "^1.0.4",
     "mocha": "^2.2.5",
+    "sinon": "^1.15.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
